<resources>
    <string name="app_name">News Article Search</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="title_activity_article">Selected Article</string>
    <string name="title_activity_settings">News Article Search Settings</string>
    <string name="save">Save</string>
    <string name="sort_by">Sort by:</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="news_desks">News Desks:</string>
    <string name="all_news_desks">All news desks</string>
    <string name="select_news_desks">Select news desks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="begin_date">Begin date:</string>
    <string name="end_date">End date:</string>
    <string name="earliest_datepicker_date">19000201</string>
    <string name="today">Today</string>
    <string name="select_dates">Select dates</string>
    <string name="arts">Arts</string>
    <string name="fashion_and_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
</resources>
