<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.tachyonlabs.nytimessearch.activities.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_date"
        android:id="@+id/tvBeginDate"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_margin="6dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:id="@+id/tvEndDate"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_toRightOf="@+id/tvForCentering"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etBeginDate"
        android:tag="beginDate"
        android:textSize="14sp"
        android:layout_below="@id/tvBeginDate"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="17dp"
        android:layout_alignParentLeft="true"
        android:onClick="showTimePickerDialog"
        android:layout_alignRight="@+id/tvForCentering"
        android:layout_alignEnd="@+id/tvForCentering" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etEndDate"
        android:tag="endDate"
        android:textSize="14sp"
        android:layout_below="@id/tvEndDate"
        android:layout_alignParentRight="true"
        android:onClick="showTimePickerDialog"
        android:layout_alignLeft="@+id/tvForCentering" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:id="@+id/tvSortBy"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:textStyle="bold"
        android:layout_below="@+id/etBeginDate"
        android:layout_alignParentLeft="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rdgSortBy"
        android:layout_below="@id/tvSortBy">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/newest"
            android:id="@+id/rdbNewest"
            android:checked="true" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oldest"
            android:id="@+id/rdbOldest" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_desks"
        android:id="@+id/tvNewsDesks"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:layout_below="@+id/rdgSortBy"
        android:layout_alignParentLeft="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rdgNewsDesks"
        android:layout_below="@+id/tvNewsDesks">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_news_desks"
            android:id="@+id/rdbAllNewsDesks"
            android:checked="true"
            android:layout_alignLeft="@+id/rdgNewsDesks" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_news_desks"
            android:id="@+id/rdbSelectNewsDesks" />

    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arts"
        android:id="@+id/chkArts"
        android:layout_below="@+id/rdgNewsDesks"
        android:checked="false"
        android:layout_toRightOf="@+id/tvForCentering"
        android:visibility="visible" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fashion_and_style"
        android:id="@+id/chkFashionAndStyle"
        android:layout_below="@+id/chkArts"
        android:layout_alignLeft="@+id/chkArts"
        android:layout_alignStart="@+id/chkArts"
        android:visibility="visible"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:id="@+id/chkSports"
        android:layout_below="@+id/chkFashionAndStyle"
        android:layout_alignLeft="@+id/chkFashionAndStyle"
        android:layout_alignStart="@+id/chkFashionAndStyle"
        android:visibility="visible"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:onClick="saveSettings"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/tvForCentering"
        android:layout_above="@+id/btnSave"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
